--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,10 @@
   "author": "Paweł Duraj, Jan Mrowiec",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "redis": "^4.0.6"
   }
 }
