--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "-",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "node tests/mocha.js"
   },
   "keywords": [
     "custom",
@@ -14,10 +14,13 @@
   "author": "Paweł Duraj, Jan Mrowiec",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.0.0",
     "redis": "^4.0.6"
   }
 }
