--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eventsource": "^2.0.2",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.0.0",
